Closed Bug 314612 Opened 20 years ago Closed 20 years ago

Autocomplete broken in Location bar

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla-graveyard, Assigned: mark)

References

Details

(Keywords: regression)

Location bar autocomplete no longer works in the 10/31 trunk nightly. It worked in the 10/30 trunk nightly. It still works in the 10/31 branch nightly (but for how long?). This is REALLY annoying.
Probably fallout from bug 263042.
Depends on: 263042
Asking for blocking on 1.0. This is really bad. cl
Flags: camino1.0?
Since it's only broken on the trunk, I don't see why it needs to block 1.0.
It doesn't.
Nope. It doesn't.
Flags: camino1.0? → camino1.0-
Errr...I mean 1.1, when we get a flag for that in bugzilla. ;) cl
The xcode packaging probably needs to ship the new libtkautocomplete.dylib component which was split off from appcomps (and matching changes to the static build manifest).
Fixed by adding libxpautocomplete on the trunk, both dynamic and static.
Assignee: mikepinkerton → mark
A fresh build as of about an hour ago does NOT show this to be fixed yet. cl
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Working for me now in a pair of trunk builds - let's see what happens with tomorrow's official trunk morningly.
Target Milestone: Camino1.0 → ---
You need to log in before you can comment on or make changes to this bug.