Bug 314612, Autocomplete broken in location bar.  Include libxpautocomplete.